@@ -1,3 +1,12 @@
+2010-06-14  Dumitru Daniliuc  <dumi@chromium.org>
+
+        Reviewed by Adam Barth.
+
+        Adding a test case to change-version.html + minor clean-ups.
+        https://bugs.webkit.org/show_bug.cgi?id=40604
+
+        * storage/change-version.html:
+
 2010-06-17  Kent Tamura  <tkent@chromium.org>
 
         Unreviewed, test expectation update.
